# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

#lite_component("app") {
#    features = [
#        "startup",
#    ]
#}

# LVGL + LCD
#lite_component("app") {
#    features = [
#        "lvgl_lcd/st7735s:st7735s",
#        "lvgl_lcd/lvgl:lvgl",
#    ]
#}

# LVGL + CST816
#lite_component("app") {
#    features = [
#        "lvgl_cst816/st7735s:st7735s",
#        "lvgl_cst816/lvgl:lvgl",
#        "lvgl_cst816/cst816:cst816",
#        "lvgl_cst816/wifi_test:wifi_test",
#    ]
#}

# LVGL + ST6201(多线程)
#lite_component("app") {
#   features = [
#        "lvgl_ctp43066/st7735s:st7735s",
#        "lvgl_ctp43066/lvgl:lvgl",
#        "lvgl_ctp43066/cst816:cst816",
#        "lvgl_ctp43066/wifi_test:wifi_test",
#    ]
#}

# LVGL + ST6201
lite_component("app") {
   features = [
        "lvgl_st6201/st7735s:st7735s",
        "lvgl_st6201/lvgl:lvgl",
        "lvgl_st6201/cst816:cst816",
        "lvgl_st6201/wifi_test:wifi_test",
    ]
}

# 门锁界面
#lite_component("app") {
#   features = [
#        "lvgl_door/st7735s:st7735s",
#        "lvgl_door/lvgl:lvgl",
#        "lvgl_door/cst816:cst816",
#        "lvgl_door/wifi_test:wifi_test",
#    ]
#}

# ASRPro
#lite_component("app") {
#   features = [
#        "lvgl_asrpro/st7735s:st7735s",
#        "lvgl_asrpro/lvgl:lvgl",
#        "lvgl_asrpro/cst816:cst816",
#        "lvgl_asrpro/wifi_test:wifi_test",
#    ]
#}

#家具
#lite_component("app") {
#   features = [
#        "lvgl_furniture/st7735s:st7735s",
#        "lvgl_furniture/lvgl:lvgl",
#        "lvgl_furniture/cst816:cst816",
#        "lvgl_furniture/wifi_test:wifi_test",
#        "lvgl_furniture/furniture:furniture",
#    ]
#}


# LCD + 硬件SPI
#lite_component("app") {
#    features = [
#        "startup",
#        "lcd_st7735s_spi:lcd_st7735s_spi",
#    ]
#}


# LCD + 软件SPI
#lite_component("app") {
#    features = [
#        "startup",
#        "lcd_st7735s:lcd_st7735s",
#    ]
#}

# 智能门锁
#lite_component("app") {
#   features = [
#        "SmartLock/main:main",
#        "SmartLock/TTP229:TTP229",        
#    ]
#}